# turbine-anomaly-detector

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Session 2 - Directory and UV Setup.md  Session 7 - ML System Design of Turbine Anomaly Detection. Creating Feature Engineering Pipeline.md  docker-compose.local.prefect.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  python-app.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
course_notes/: Session 10 - Data Management Module.md  Session 10 - Developing Inference Pipeline. Integrating MLflow into ML Pipelines..md  Session 11 - Connecting ML Pipelines and Database. Application Entrypoints.md  Session 11 - Data Management Module.md  Session 12 - Developing UI Application with Dash.md  Session 13 - Building Real-time Data Streaming and Inference.md  Session 13 - Code Testing with Pytest. Introduction to CI.md  Session 13 - Model Monitoring and Data Drift.md  Session 14 - Building CI with GitHub Actions.md  Session 14 - Building Real-time Data Streaming and Inference. Code Testing with Pytest copy.md  Session 14 - Building Real-time Data Streaming and Inference. Code Testing with Pytest.md  Session 15 - Developing UI Application with Dash.md  Session 15 - Python Code Quality, Auto-formatting and pre-commit framework.md  Session 16 - Building CI with GitHub Actions.md  Session 16 - Building real-time data streaming. Building application entrypoints.md  Session 16 - Python Code Quality, Auto-formatting and pre-commmit framework.md  Session 17 - Building CI with GitHub Actions copy.md  Session 17 - Deep-dive into Docker, Docker-compose & Docker Registry.md  Session 18 - Cloud Deployment. Continuous Deployment Pipeline.md  Session 19 - ML Pipeline Orchestration with Prefect.md  Session 2 - Directory and UV Setup.md  Session 7 - ML System Design of Turbine Anomaly Detection. Creating Feature Engineering Pipeline..md  Session 7 - ML System Design of Turbine Anomaly Detection. Creating Feature Engineering Pipeline.md  Session 8 - Developing Training Pipeline. Learn how to debug Kedro pipelines.md  Session 8 - Introduction to ML Pipelines and Kedro. Creating Feature Engineering Pipeline..md  Session 9 - Developing Training Pipeline. Learn how to debug Kedro pipelines.md  Session 9 - Integrating MLflow into ML Pipelines. Developing Inference and Monitoring Pipelines.md
data/01_raw/: df_test.parquet  df_train.parquet
docs/source/: conf.py  index.rst
entrypoints/: app_stream_data.py  app_ui.py  inference.py  inference_real_time.py  training.py
entrypoints/prefect/: inference.py  monitoring.py  training.py
notebooks/: 00 - Data Modification.ipynb  01 - EDA.ipynb  02 - Baseline model.ipynb  03 - Deep Data Cleaning, Feature Engineering and Model Selection.ipynb  04 - Hyperparameter Tuning, Experiment Tracking, Registering Model.ipynb  05 - Local Data Preperation.ipynb  06 - Data Monitoring.ipynb  utils.py
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/temp_artifacts/: catboost_model.cbm  preprocessing.py  x_scaler.joblib
src/app_data_manager/: app.py  data_manager.py  utils.py
src/app_ui/: app.py  utils.py
src/app_ui/assets/: custom.css  (+1 more)
src/prefect_orchestrator/: inference_flow.py  monitoring_flow.py  training_flow.py
tests/: conftest.py  test_feat_eng_pipeline.py
(+26 files in other folders)
